Allow empty will messages

A will message is allowed to be empty. Hence, check whether a will topic
exists to identify incorporating the last will to the connect message.

Task-number: QTBUG-76783
Change-Id: Ifb7f5467e8e7e70c6d9c050b36a35df2419f4171
Reviewed-by: hjk <hjk@qt.io>